# rn-compute-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  craby.toml  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/rncomputebench/: NativeBruteForceKotlinModule.kt  RnComputeBenchPackage.kt
android/src/main/jni/: OnLoad.cpp
android/stubs/: CMakeLists.txt  RnComputeBench_stub.cpp  RnComputeBench_stub.h
cpp/: CrabyUtils.hpp  CxxBruteForceRustModule.cpp  CxxBruteForceRustModule.hpp
crates/lib/: Cargo.toml
crates/lib/src/: brute_force_rust_impl.rs
example/: App.tsx  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rncomputebench/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/scripts/: release-android.sh
example/src/components/: HashDisplay.tsx  MaxLengthInput.tsx  ModeSelector.tsx  PlaintextInput.tsx  ProgressDisplay.tsx  ResultDisplay.tsx
example/src/screens/: BenchmarkScreen.tsx
ios/: RnComputeBenchModuleProvider.mm
src/: BruteForceKotlin.ts  MD5BruteForceJS.ts  NativeBruteForceRust.ts  index.ts
