[package]
name = "rn_compute_bench"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
craby = "0.1.0-rc"
cxx = { version = "1.0.187", features = ["c++20"] }
md5 = "0.8.0"

[build-dependencies]
craby_build = { version = "0.1.0-rc", features = ["cxx"] }

[lib]
name = "rncomputebench"
crate-type = ["staticlib"]
